feat: 更新 GitHub Actions 工作流，添加调试模式和秘密配置检查，增强部署脚本的可用性和安全性

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,9 @@
 # ========================================
+# 环境配置示例文件
+# ========================================
+# 复制此文件为 .env 并修改相应配置
+
+# ========================================
 # 环境配置
 # ========================================
 # 运行环境：development | test | production
@@ -58,4 +63,3 @@ DATABASE_URL="postgresql://postgres:123456@127.0.0.1:5432/nest-admin?schema=publ
 # TENANT_ENABLED=true
 # TENANT_SUPER_TENANT_ID=000000
 # TENANT_DEFAULT_TENANT_ID=000000
-
