--- a/.github/workflows/deploy-advanced.yml
+++ b/.github/workflows/deploy-advanced.yml
@@ -6,10 +6,18 @@ on:
       - main
       - main-soybean
   workflow_dispatch:
+    inputs:
+      debug:
+        description: 'Enable debug mode'
+        required: false
+        default: 'false'
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    
+    # 只在主仓库运行，fork 的 PR 不运行部署
+    if: github.event_name == 'workflow_dispatch' || github.repository == 'linlingqin77/Nest-Admin'
     
     strategy:
       matrix:
@@ -20,6 +28,20 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      # 调试信息
+      - name: Debug Information
+        run: |
+          echo "========================================="
+          echo "调试信息"
+          echo "========================================="
+          echo "Repository: ${{ github.repository }}"
+          echo "Event: ${{ github.event_name }}"
+          echo "Ref: ${{ github.ref }}"
+          echo "Branch: ${{ github.ref_name }}"
+          echo "Actor: ${{ github.actor }}"
+          echo "Is Fork: ${{ github.event.pull_request.head.repo.fork }}"
+          echo "========================================="
 
       - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
@@ -80,18 +102,58 @@ jobs:
       # 检查必需的 secrets
       - name: Check required secrets
         run: |
+          MISSING_SECRETS=""
+          
           if [ -z "${{ secrets.REMOTE_HOST }}" ]; then
-            echo "❌ Error: REMOTE_HOST secret is not set"
-            echo "Please configure the following secrets in GitHub repository settings:"
-            echo "  - REMOTE_HOST: Your server IP or domain"
-            echo "  - REMOTE_USER: SSH username (e.g., root)"
-            echo "  - SSH_PRIVATE_KEY: Your SSH private key"
-            echo "  - REMOTE_PORT: SSH port (default: 22)"
-            echo "  - REMOTE_FRONTEND_DIR: Frontend deployment directory"
-            echo "  - REMOTE_BACKEND_DIR: Backend deployment directory"
+            MISSING_SECRETS="${MISSING_SECRETS}\n  ❌ REMOTE_HOST"
+          else
+            echo "✅ REMOTE_HOST is configured"
+          fi
+          
+          if [ -z "${{ secrets.REMOTE_USER }}" ]; then
+            MISSING_SECRETS="${MISSING_SECRETS}\n  ❌ REMOTE_USER"
+          else
+            echo "✅ REMOTE_USER is configured"
+          fi
+          
+          if [ -z "${{ secrets.SSH_PRIVATE_KEY }}" ]; then
+            MISSING_SECRETS="${MISSING_SECRETS}\n  ❌ SSH_PRIVATE_KEY"
+          else
+            echo "✅ SSH_PRIVATE_KEY is configured"
+          fi
+          
+          if [ -z "${{ secrets.REMOTE_FRONTEND_DIR }}" ]; then
+            MISSING_SECRETS="${MISSING_SECRETS}\n  ❌ REMOTE_FRONTEND_DIR"
+          else
+            echo "✅ REMOTE_FRONTEND_DIR is configured"
+          fi
+          
+          if [ -z "${{ secrets.REMOTE_BACKEND_DIR }}" ]; then
+            MISSING_SECRETS="${MISSING_SECRETS}\n  ❌ REMOTE_BACKEND_DIR"
+          else
+            echo "✅ REMOTE_BACKEND_DIR is configured"
+          fi
+          
+          if [ -n "$MISSING_SECRETS" ]; then
+            echo ""
+            echo "❌ Error: Missing required GitHub Secrets"
+            echo "============================================"
+            echo -e "$MISSING_SECRETS"
+            echo ""
+            echo "📖 Configuration Guide:"
+            echo "   1. Go to: https://github.com/${{ github.repository }}/settings/secrets/actions"
+            echo "   2. Click 'New repository secret'"
+            echo "   3. Add the missing secrets listed above"
+            echo ""
+            echo "📚 Detailed setup instructions:"
+            echo "   https://github.com/${{ github.repository }}/blob/main/docs/GITHUB_SECRETS_SETUP.md"
+            echo ""
             exit 1
           fi
-          echo "✅ Required secrets are configured"
+          
+          echo ""
+          echo "✅ All required secrets are configured!"
+          echo "🚀 Proceeding with deployment..."
 
       # 上传到服务器并部署
       - name: Deploy to production server
