feat: Add deployment tutorial and automation script for Nest-Admin backend
- Introduced a comprehensive deployment tutorial in `DEPLOY_TUTORIAL.md` for production setup using PM2 and automated scripts.
- Created `deploy.cjs` script for streamlined deployment, including build, upload, dependency installation, and service management.
- Added example deployment configuration in `deploy.config.example.cjs` for different environments (production, test, development).
- Implemented environment variable validation in `env.validation.ts` to ensure proper configuration.
- Added DTOs for department tree nodes, user status changes, and role status changes to enhance API structure.
- Improved error handling and logging throughout the deployment process for better troubleshooting.

--- a/admin-naive-ui/.env
+++ b/admin-naive-ui/.env
@@ -1,63 +1,63 @@
-# the base url of the application, the default is "/"
-# if use a sub directory, it must be end with "/", like "/admin/" but not "/admin"
+# 应用的基础 URL，默认是 "/"
+# 如果使用子目录，必须以 "/" 结尾，例如 "/admin/" 而不是 "/admin"
 VITE_BASE_URL=/
 
 VITE_APP_TITLE=RuoYi Plus Soybean
 
 VITE_APP_DESC=RuoYi Plus Soybean 后台管理系统
 
-# the prefix of the icon name
+# 图标名称的前缀
 VITE_ICON_PREFIX=icon
 
-# the prefix of the local svg icon component, must include VITE_ICON_PREFIX
-# format {VITE_ICON_PREFIX}-{local icon name}
+# 本地 SVG 图标组件的前缀，必须包括 VITE_ICON_PREFIX
+# 格式 {VITE_ICON_PREFIX}-{本地图标名称}
 VITE_ICON_LOCAL_PREFIX=icon-local
 
-# auth route mode: static ｜ dynamic
+# 权限路由模式：static（静态）｜ dynamic（动态）
 VITE_AUTH_ROUTE_MODE=dynamic
 
-# static auth route home
+# 静态权限路由首页
 VITE_ROUTE_HOME=home
 
-# default menu icon
+# 默认菜单图标
 VITE_MENU_ICON=mdi:menu
 
-# whether to enable http proxy when is dev mode
+# 开发模式下是否启用 HTTP 代理
 VITE_HTTP_PROXY=Y
 
-# vue-router mode: hash | history | memory
+# Vue Router 模式：hash | history | memory
 VITE_ROUTER_HISTORY_MODE=history
 
-# success code of backend service, when the code is received, the request is successful
+# 后端服务成功代码，当收到此代码时，请求成功
 VITE_SERVICE_SUCCESS_CODE=200
 
-# logout codes of backend service, when the code is received, the user will be logged out and redirected to login page
+# 后端服务登出代码，当收到此代码时，用户将被登出并重定向到登录页面
 VITE_SERVICE_LOGOUT_CODES=401
 
-# modal logout codes of backend service, when the code is received, the user will be logged out by displaying a modal
+# 后端服务模态框登出代码，当收到此代码时，将显示模态框并登出用户
 VITE_SERVICE_MODAL_LOGOUT_CODES=401
 
-# token expired codes of backend service, when the code is received, it will refresh the token and resend the request
+# 后端服务令牌过期代码，当收到此代码时，将刷新令牌并重新发送请求
 VITE_SERVICE_EXPIRED_TOKEN_CODES=9999,9998,3333
 
-# when the route mode is static, the defined super role
+# 当路由模式为静态时，定义的超级角色
 VITE_STATIC_SUPER_ROLE=R_SUPER
 
-# sourcemap
+# 源代码映射
 VITE_SOURCE_MAP=N
 
-# Used to differentiate storage across different domains
+# 用于区分不同域之间的存储
 VITE_STORAGE_PREFIX=RY_
 
-# used to control whether the program automatically detects updates
+# 用于控制程序是否自动检测更新
 VITE_AUTOMATICALLY_DETECT_UPDATE=Y
 
-# watermark
+# 水印
 VITE_WATERMARK=N
 
-# show proxy url log in terminal
+# 在终端中显示代理 URL 日志
 VITE_PROXY_LOG=Y
 
-# used to control whether to launch editor
-# by the way, this plugin is only available in dev mode, not in build mode
+# 用于控制是否启动编辑器
+# 顺便说一下，此插件仅在开发模式下可用，在构建模式下不可用
 VITE_DEVTOOLS_LAUNCH_EDITOR=code
