--- a/server/.env
+++ b/server/.env
@@ -1,61 +1,60 @@
 # ========================================
-# 环境配置
+# 纯环境变量配置示例（复制为 .env 后按需修改）
 # ========================================
+
 # 运行环境：development | test | production
 NODE_ENV=development
 
-# ========================================
-# 数据库配置
-# ========================================
-# PostgreSQL 数据库连接字符串
-# 格式：postgresql://用户名:密码@主机:端口/数据库名?schema=schema名
+# PostgreSQL 连接（Prisma 与运行时统一使用）
 DATABASE_URL="postgresql://postgres:123456@127.0.0.1:5432/nest-admin?schema=public"
 
-# 测试环境数据库（可选）
-# DATABASE_URL_TEST="postgresql://postgres:123456@127.0.0.1:5432/nest-admin-test?schema=public"
+# 应用配置
+APP_PORT=8080
+APP_PREFIX=/api
+# LOG_DIR=../logs
 
-# 生产环境数据库（可选，建议在生产环境设置）
-# DATABASE_URL_PROD="postgresql://postgres:your-password@your-host:5432/nest-admin?schema=public"
+# 数据库细项（可选，覆盖配置对象）
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=123456
+DB_DATABASE=nest-admin
+DB_SCHEMA=public
+DB_SSL=false
 
-# ========================================
-# Redis 配置（可选，覆盖 yml 配置）
-# ========================================
-# REDIS_HOST=localhost
-# REDIS_PORT=6379
-# REDIS_PASSWORD=123456
-# REDIS_DB=2
+# Redis 配置
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=123456
+REDIS_DB=2
+# REDIS_KEY_PREFIX=nest-admin:
 
-# ========================================
-# JWT 配置（可选，覆盖 yml 配置）
-# ========================================
-# JWT_SECRET=your_secret_key
-# JWT_EXPIRES_IN=1h
-# JWT_REFRESH_EXPIRES_IN=2h
+# JWT 配置
+JWT_SECRET=change_me_in_production
+JWT_EXPIRES_IN=1h
+JWT_REFRESH_EXPIRES_IN=2h
 
-# ========================================
-# 应用配置（可选，覆盖 yml 配置）
-# ========================================
-# APP_PORT=8080
-# APP_PREFIX=/api
+# 文件上传
+FILE_IS_LOCAL=true
+FILE_UPLOAD_LOCATION=../upload
+FILE_MAX_SIZE=10
+FILE_DOMAIN=http://localhost:8080
+FILE_SERVE_ROOT=/profile
 
-# ========================================
-# 文件上传配置（可选）
-# ========================================
-# FILE_UPLOAD_LOCATION=../upload
-# FILE_MAX_SIZE=10
+# 腾讯云 COS（可选）
+# COS_SECRET_ID=
+# COS_SECRET_KEY=
+# COS_BUCKET=
+# COS_REGION=
+# COS_DOMAIN=
+# COS_LOCATION=
 
-# ========================================
-# 腾讯云 COS 配置（可选）
-# ========================================
-# COS_SECRET_ID=your-secret-id
-# COS_SECRET_KEY=your-secret-key
-# COS_BUCKET=your-bucket
-# COS_REGION=your-region
+# 白名单（可选，JSON 字符串）
+# PERM_WHITELIST=[{"path":"/captchaImage","method":"GET"}]
 
-# ========================================
-# 多租户配置（可选）
-# ========================================
-# TENANT_ENABLED=true
-# TENANT_SUPER_TENANT_ID=000000
-# TENANT_DEFAULT_TENANT_ID=000000
-
+# 代码生成器（可选）
+# GEN_AUTHOR=nestAdmin
+# GEN_PACKAGE_NAME=system
+# GEN_MODULE_NAME=system
+# GEN_AUTO_REMOVE_PRE=false
+# GEN_TABLE_PREFIX=sys_
