--- a/server/.env.production
+++ b/server/.env.production
@@ -3,10 +3,10 @@
 # ========================================
 
 # 运行环境：development | test | production
-NODE_ENV=development
+NODE_ENV=production
 
 # PostgreSQL 连接（Prisma 与运行时统一使用）
-DATABASE_URL="postgresql://postgres:123456@127.0.0.1:5432/nest-admin?schema=public"
+DATABASE_URL="postgresql://postgres:Llq123456@127.0.0.1:5432/nest_admin?schema=public"
 
 # 应用配置
 APP_PORT=8080
@@ -17,10 +17,10 @@ APP_PREFIX=/api
 DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_USERNAME=postgres
-DB_PASSWORD=123456
-DB_DATABASE=nest-admin
+DB_PASSWORD=Llq123456
+DB_DATABASE=nest_admin
 DB_SCHEMA=public
-# DB_SSL=false
+DB_SSL=false
 
 # Redis 配置
 REDIS_HOST=localhost
