--- a/admin-naive-ui/.env.prod
+++ b/admin-naive-ui/.env.prod
@@ -1,4 +1,7 @@
+VITE_SERVICE_BASE_URL=http://www.linlingqin.top
 VITE_APP_BASE_API=/prod-api
+# 不使用代理
+VITE_HTTP_PROXY=N
 
 # watermark
 VITE_WATERMARK=Y
