--- a/server/.gitignore
+++ b/server/.gitignore
@@ -39,3 +39,8 @@ lerna-debug.log*
 package-lock.json
 yarn.lock
 pnpm-lock.yaml
+
+# Deployment
+deploy.config.cjs
+.deploy-temp/
+server_deploy_*.tar.gz
