--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,10 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "build:dev": "cross-env NODE_ENV=development nest build",
+    "build:test": "cross-env NODE_ENV=test nest build",
+    "build:prod": "cross-env NODE_ENV=production nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "npm run start:dev",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:test": "cross-env NODE_ENV=test nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -25,7 +26,10 @@
     "prisma:seed": "prisma db push --force-reset --accept-data-loss && ts-node prisma/seed.ts && redis-cli -a 123456 -n 2 FLUSHDB",
     "prisma:seed:only": "ts-node prisma/seed.ts",
     "prisma:reset": "prisma migrate reset --force && npm run prisma:seed:only",
-    "redis:flush": "redis-cli -a 123456 -n 2 FLUSHDB"
+    "redis:flush": "redis-cli -a 123456 -n 2 FLUSHDB",
+    "deploy:prod": "node deploy.cjs prod",
+    "deploy:test": "node deploy.cjs test",
+    "deploy:dev": "node deploy.cjs dev"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
@@ -48,7 +52,6 @@
     "archiver": "^7.0.1",
     "axios": "^1.6.7",
     "bcryptjs": "^3.0.2",
-    "chalk": "^5.3.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cos-nodejs-sdk-v5": "^2.13.4",
@@ -88,14 +91,18 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "chalk": "^4.1.2",
+    "compressing": "^2.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "ora": "^5.4.1",
     "prettier": "^3.0.0",
     "prisma": "^5.17.0",
     "source-map-support": "^0.5.21",
+    "ssh2": "^1.17.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
