feat: add deployment scripts for frontend and backend projects
- Implemented frontend deployment script (deploy.cjs) for building, backing up, and uploading files to the server.
- Created deployment configuration template (deploy.config.example.cjs) for different environments (dev, test, prod).
- Added README documentation for backend deployment scripts, detailing usage and file descriptions.
- Developed backend deployment script (deploy.cjs) for NestJS projects, including build, upload, and service management.
- Introduced ecosystem configuration for PM2 process management.
- Added example configuration file (deploy.config.example.cjs) for backend deployment with detailed comments.
- Created a template YAML configuration file for development environment settings.

--- a/admin-naive-ui/.env
+++ b/admin-naive-ui/.env
@@ -2,9 +2,9 @@
 # 如果使用子目录，必须以 "/" 结尾，例如 "/admin/" 而不是 "/admin"
 VITE_BASE_URL=/
 
-VITE_APP_TITLE=RuoYi Plus Soybean
+VITE_APP_TITLE=Nest Admin
 
-VITE_APP_DESC=RuoYi Plus Soybean 后台管理系统
+VITE_APP_DESC=Nest Admin 后台管理系统
 
 # 图标名称的前缀
 VITE_ICON_PREFIX=icon
