--- a/admin-naive-ui/package.json
+++ b/admin-naive-ui/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "ruoyi-vue-plus",
+  "name": "nest-admin-ui",
   "type": "module",
   "version": "1.2.1",
-  "description": "结合了 RuoYi-Vue-Plus 的强大后端功能和 Soybean Admin 的现代化前端特性，为开发者提供了完整的企业管理解决方案。",
+  "description": "基于 Vue3 + NestJS 的现代化企业级后台管理系统，集成了强大的权限管理和丰富的组件库。",
   "license": "MIT",
-  "homepage": "https://docs.ruoyi.xlsea.cn",
+  "homepage": "https://github.com/linlingqin77/Nest-Admin",
   "keywords": [
-    "RuoYi-Vue-Plus",
-    "Soybean Admin",
-    "Vue3 admin ",
-    "vue-admin-template",
+    "Nest-Admin",
+    "Vue3",
+    "NestJS",
+    "admin-template",
     "Vite7",
     "TypeScript",
     "naive-ui",
     "naive-ui-admin",
-    "ant-design-vue v4",
     "UnoCSS"
   ],
-  "contributors": [],
+  "contributors": ["linlingqin77"],
   "engines": {
     "node": ">=20.19.0",
     "pnpm": ">=10.5.0"
@@ -29,9 +28,9 @@
     "cleanup": "sa cleanup",
     "commit": "sa git-commit",
     "commit:zh": "sa git-commit -l=zh-cn",
-    "deploy:dev": "node deploy.cjs dev",
-    "deploy:test": "node deploy.cjs test",
-    "deploy:prod": "node deploy.cjs prod",
+    "deploy:dev": "node scripts/deploy.cjs dev",
+    "deploy:test": "node scripts/deploy.cjs test",
+    "deploy:prod": "node scripts/deploy.cjs prod",
     "dev": "vite --mode dev",
     "dev:prod": "vite --mode prod",
     "dev:test": "vite --mode test",
