--- a/server/.env.example
+++ b/server/.env.example
@@ -53,8 +53,25 @@ FILE_SERVE_ROOT=/profile
 # PERM_WHITELIST=[{"path":"/captchaImage","method":"GET"}]
 
 # 代码生成器（可选）
-# GEN_AUTHOR=nestAdmin
+# GEN_AUTHOR=linlingqin77
 # GEN_PACKAGE_NAME=system
 # GEN_MODULE_NAME=system
 # GEN_AUTO_REMOVE_PRE=false
 # GEN_TABLE_PREFIX=sys_
+
+# 用户配置
+USER_INITIAL_PASSWORD=123456
+
+# 多租户配置
+TENANT_ENABLED=true
+TENANT_SUPER_ID=000000
+TENANT_DEFAULT_ID=000000
+
+# 加密配置（开发环境默认关闭）
+CRYPTO_ENABLED=false
+# CRYPTO_RSA_PUBLIC_KEY=
+# CRYPTO_RSA_PRIVATE_KEY=
+
+# 客户端配置
+CLIENT_DEFAULT_ID=pc
+CLIENT_DEFAULT_GRANT_TYPE=password
