--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nest-v10",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "name": "nest-admin-server",
+  "version": "2.0.0",
+  "description": "Nest-Admin 后端服务，基于 NestJS + Prisma 构建的企业级后台管理系统",
+  "author": "linlingqin77",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "build:dev": "cross-env NODE_ENV=development nest build",
     "build:test": "cross-env NODE_ENV=test nest build",
@@ -27,9 +27,9 @@
     "prisma:seed:only": "ts-node prisma/seed.ts",
     "prisma:reset": "prisma migrate reset --force && npm run prisma:seed:only",
     "redis:flush": "redis-cli -a 123456 -n 2 FLUSHDB",
-    "deploy:prod": "node deploy.cjs prod",
-    "deploy:test": "node deploy.cjs test",
-    "deploy:dev": "node deploy.cjs dev"
+    "deploy:prod": "node scripts/deploy.cjs prod",
+    "deploy:test": "node scripts/deploy.cjs test",
+    "deploy:dev": "node scripts/deploy.cjs dev"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
