--- a/server/package.json
+++ b/server/package.json
@@ -52,6 +52,7 @@
     "@nestjs/schedule": "^4.1.2",
     "@nestjs/swagger": "^11.2.3",
     "@nestjs/terminus": "^11.0.0",
+    "@nestjs/throttler": "^6.5.0",
     "@prisma/client": "^5.17.0",
     "@songkeys/nestjs-redis": "^10.0.0",
     "@types/lodash": "^4.17.13",
@@ -91,7 +92,9 @@
     "useragent": "^2.3.0",
     "uuid": "^9.0.1",
     "winston": "^3.15.0",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "cookie-parser": "^1.4.7",
+    "csurf": "^1.11.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -123,7 +126,8 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "@types/csurf": "^1.11.2"
   },
   "resolutions": {
     "string-width": "4.2.3"
