feat(crypto): enhance request encryption with nonce and timestamp validation
- Implement nonce and timestamp generation for request data to prevent replay attacks
- Update AES encryption process to include nonce and timestamp in the encrypted payload
- Add configuration options for nonce expiration and timestamp tolerance in environment variables
- Enhance CryptoService to validate nonce and timestamp during decryption, ensuring request integrity
- Update related configuration files and documentation to reflect new security features

--- a/server/.env.example
+++ b/server/.env.example
@@ -135,3 +135,7 @@ UMcXvzLjSN8Ng4M3r/7L6+w=
 # 客户端配置
 CLIENT_DEFAULT_ID=pc
 CLIENT_DEFAULT_GRANT_TYPE=password
+
+# crypto anti-replay (ms)
+CRYPTO_NONCE_TTL=300000
+CRYPTO_TIMESTAMP_TOLERANCE=300000
